tests/baselines/reference/lastPropertyInLiteralWins.errors.txt
tests/cases/compiler/lastPropertyInLiteralWins.ts(7,6): error TS2345: Argument of type '{ thunk: (num: 数字) => 无值; }' is not assignable to parameter of type 'Thing'.
  Types of property 'thunk' are incompatible.
    Type '(num: 数字) => 无值' is not assignable to type '(str: 文字) => 无值'.
      Types of parameters 'num' and 'str' are incompatible.
        Type '文字' is not assignable to type '数字'.
tests/cases/compiler/lastPropertyInLiteralWins.ts(9,5): error TS2300: Duplicate identifier 'thunk'.
tests/cases/compiler/lastPropertyInLiteralWins.ts(14,5): error TS2300: Duplicate identifier 'thunk'.


==== tests/cases/compiler/lastPropertyInLiteralWins.ts (3 errors) ====
    interface Thing {
        thunk: (str: string) => void;
    }
    function test(thing: Thing) {
        thing.thunk("str");
    }
    test({ // Should error, as last one wins, and is wrong type
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        thunk: (str: string) => {},
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        thunk: (num: number) => {}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        ~~~~~
!!! error TS2300: Duplicate identifier 'thunk'.
    });
    ~
!!! error TS2345: Argument of type '{ thunk: (num: 数字) => 无值; }' is not assignable to parameter of type 'Thing'.
!!! error TS2345:   Types of property 'thunk' are incompatible.
!!! error TS2345:     Type '(num: 数字) => 无值' is not assignable to type '(str: 文字) => 无值'.
!!! error TS2345:       Types of parameters 'num' and 'str' are incompatible.
!!! error TS2345:         Type '文字' is not assignable to type '数字'.
    
    test({ // Should be OK.  Last 'thunk' is of correct type
        thunk: (num: number) => {},
        thunk: (str: string) => {}
        ~~~~~
!!! error TS2300: Duplicate identifier 'thunk'.
    });
    